second attemptto stop navbar from overlapping navbar contents

--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,6 +1,7 @@
 .navbar{
     flex-wrap:wrap ;
     justify-content: center;
+    margin-top: 20px;
 
 }
 
